--- a/hyperkeras/tests/benchmark/nasbench101.ipynb
+++ b/hyperkeras/tests/benchmark/nasbench101.ipynb
@@ -19,13 +19,12 @@
    ],
    "source": [
     "from nasbench import api\n",
-    "from hypernets.benchmark.nas_bench_101 import NasBench101\n",
+    "from hyperkeras.benchmark.nas_bench_101 import NasBench101\n",
     "from hypernets.searchers.random_searcher import RandomSearcher\n",
     "from hypernets.searchers.mcts_searcher import MCTSSearcher\n",
     "from hypernets.searchers.evolution_searcher import EvolutionSearcher\n",
     "from hypernets.core.meta_learner import MetaLearner\n",
-    "from hypernets.core.trial import get_default_trail_store, TrailHistory, DiskTrailStore, Trail\n",
-    "from tests import test_output_dir\n",
+    "from hypernets.core.trial import get_default_trial_store, TrialHistory, DiskTrialStore, Trial\n",
     "import matplotlib.pyplot as plt\n",
     "import random\n",
     "import numpy as np"
@@ -113,15 +112,15 @@
     "    print('Running repeat %d' % (repeat + 1))\n",
     "\n",
     "    rs_searcher = RandomSearcher(hyn_nasbench.get_space, space_sample_validation_fn=hyn_nasbench.valid_space_sample)\n",
-    "    times, best_valid, best_test = hyn_nasbench.run_searcher(rs_searcher,max_trails=150000)\n",
+    "    times, best_valid, best_test = hyn_nasbench.run_searcher(rs_searcher,max_trials=150000)\n",
     "    random_data.append((times, best_valid, best_test))\n",
     "\n",
     "    evol_searcher = EvolutionSearcher(hyn_nasbench.get_space,50,20,regularized=False, optimize_direction='max',space_sample_validation_fn=hyn_nasbench.valid_space_sample)\n",
-    "    times, best_valid, best_test = hyn_nasbench.run_searcher(evol_searcher,max_trails=150000, use_meta_learner=False)\n",
+    "    times, best_valid, best_test = hyn_nasbench.run_searcher(evol_searcher,max_trials=150000, use_meta_learner=False)\n",
     "    evolution_data.append((times, best_valid, best_test))\n",
     "\n",
     "    mcts_searcher = MCTSSearcher(hyn_nasbench.get_space, optimize_direction='max',space_sample_validation_fn=hyn_nasbench.valid_space_sample)\n",
-    "    times, best_valid, best_test = hyn_nasbench.run_searcher(mcts_searcher,max_trails=150000, use_meta_learner=False)\n",
+    "    times, best_valid, best_test = hyn_nasbench.run_searcher(mcts_searcher,max_trials=150000, use_meta_learner=False)\n",
     "    mcts_data.append((times, best_valid, best_test))\n"
    ]
   },
@@ -136,15 +135,15 @@
     "#     print('Running repeat %d' % (repeat + 1))\n",
     "\n",
     "#     rs_searcher = RandomSearcher(hyn_nasbench.get_space, space_sample_validation_fn=valid_space_sample)\n",
-    "#     times, best_valid, best_test = run_searcher(rs_searcher,max_trails=1000000)\n",
+    "#     times, best_valid, best_test = run_searcher(rs_searcher,max_trials=1000000)\n",
     "#     random_data.append((times, best_valid, best_test))\n",
     "\n",
     "# #     evol_searcher = EvolutionSearcher(hyn_nasbench.get_space,50,20,regularized=False, optimize_direction='max',space_sample_validation_fn=valid_space_sample)\n",
-    "# #     times, best_valid, best_test = run_searcher(evol_searcher,max_trails=150, use_meta_learner=False)\n",
+    "# #     times, best_valid, best_test = run_searcher(evol_searcher,max_trials=150, use_meta_learner=False)\n",
     "# #     evolution_data.append((times, best_valid, best_test))\n",
     "\n",
     "# #     mcts_searcher = MCTSSearcher(hyn_nasbench.get_space, optimize_direction='max',space_sample_validation_fn=valid_space_sample)\n",
-    "# #     times, best_valid, best_test = run_searcher(mcts_searcher,max_trails=150, use_meta_learner=False)\n",
+    "# #     times, best_valid, best_test = run_searcher(mcts_searcher,max_trials=150, use_meta_learner=False)\n",
     "# #     mcts_data.append((times, best_valid, best_test))\n"
    ]
   },
@@ -404,15 +403,15 @@
     "    print('Running repeat %d' % (repeat + 1))\n",
     "\n",
     "    rs_searcher = RandomSearcher(hyn_nasbench.get_space, space_sample_validation_fn=valid_space_sample)\n",
-    "    times, best_valid, best_test = run_searcher(rs_searcher,max_trails=150)\n",
+    "    times, best_valid, best_test = run_searcher(rs_searcher,max_trials=150)\n",
     "    random_data.append((times, best_valid, best_test))\n",
     "\n",
     "    evol_searcher = EvolutionSearcher(hyn_nasbench.get_space,50,20,regularized=False, optimize_direction='max',space_sample_validation_fn=valid_space_sample)\n",
-    "    times, best_valid, best_test = run_searcher(evol_searcher,max_trails=150, use_meta_learner=True)\n",
+    "    times, best_valid, best_test = run_searcher(evol_searcher,max_trials=150, use_meta_learner=True)\n",
     "    evolution_data.append((times, best_valid, best_test))\n",
     "\n",
     "    mcts_searcher = MCTSSearcher(hyn_nasbench.get_space, optimize_direction='max',space_sample_validation_fn=valid_space_sample)\n",
-    "    times, best_valid, best_test = run_searcher(mcts_searcher,max_trails=150, use_meta_learner=True)\n",
+    "    times, best_valid, best_test = run_searcher(mcts_searcher,max_trials=150, use_meta_learner=True)\n",
     "    mcts_data.append((times, best_valid, best_test))\n"
    ]
   },
